model train app with Redis and Celery
