# chat_bot_api/app_model/tasks.py
@@ -1,0 +1,63 @@
+import os
+import traceback
+import shutil
+
+from django.db import IntegrityError
+from rest_framework.exceptions import ValidationError
+from celery import shared_task, states
+
+from .models import TaskStatus
+from .services import PrepareDataService
+from core.models import LogSystem
+
+
+@shared_task
+def set_database_and_train_data(download_dir: str):
+    ''''''
+
+    try:
+        task_id = set_database_and_train_data.request.id
+
+        TaskStatus.objects.filter(task_id = task_id).update(
+            status = states.PENDING,
+            result = 'Downloading data from HuggingFace'
+        )
+
+        PrepareDataService.get_huggingface_data_and_save(download_dir)
+
+
+        TaskStatus.objects.filter(task_id = task_id).update(
+            status = states.SUCCESS,
+            result = 'Successful download and saving data as parquet'
+        )
+
+
+    except ValidationError as e:
+        if os.path.exists(download_dir):
+            shutil.rmtree(download_dir)
+
+        TaskStatus.objects.filter(task_id = task_id).update(
+            status = states.FAILURE,
+            result = str(e)
+        )
+
+        raise e
+
+    except IntegrityError:
+        LogSystem.objects.create(error = str(e), stacktrace = traceback.format_exc())
+
+        TaskStatus.objects.filter(task_id = task_id).update(
+            status = states.FAILURE,
+            result = str(e)
+        )
+
+    except Exception as e:
+        LogSystem.objects.create(error = str(e), stacktrace = traceback.format_exc())
+        
+        TaskStatus.objects.filter(task_id = task_id).update(
+            status = states.FAILURE,
+            result = str(e)
+        )
+
+        if os.path.exists(download_dir):
+            shutil.rmtree(download_dir)
